--- a/footerslider.css
+++ b/footerslider.css
@@ -1,5 +1,5 @@
 .pic-ctn {
-    width: 95%;
+    width: fit-content;
     height: 200px;
   }
   
@@ -16,7 +16,7 @@
       transform: translateX(0);
       opacity: 1;
     }
-    30% {
+    50% {
       transform: translateX(-200px);
       opacity: 0;
     }
