--- a/css/index.css
+++ b/css/index.css
@@ -121,7 +121,7 @@ nav{
 .content-home{
     display: flex;
     margin-bottom: 5rem;
-    background-color: rgb(255, 255, 255, 0.5)
+    background-color: rgb(255, 255, 255)
 }
 
 .content-home>.description{
