--- a/contact us.css
+++ b/contact us.css
@@ -2,6 +2,33 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: #f8f9f2;
+}
 .text-center{
     margin-top: 100px;
+}
+.img-fluid{
+    margin-top: 100px;
+}
+.first_col{
+    background-color: white;
+    height: 550px;
+    position: relative;
+    width: 550px;
+    left: 155px;
+    top: 171px;
+    border-radius: 20px;
+}
+.img-fluid{
+    border-radius: 20px;
+}
+.last_row{
+    width: 100%;
+    position: relative;
+    left: 350px;
+    top: 50px;
+    height: 200px;
+    padding-bottom: 100px;
+    background-color: #c1b688;
 }
