added contact us

--- a/contact us.css
+++ b/contact us.css
@@ -2,33 +2,62 @@
     margin: 0;
     padding: 0;
 }
+/* 
 body{
     background-color: #f8f9f2;
+    overflow-x: hidden;
+    max-width: fit-content;
+
+} */
+ .Contact{
+    margin-bottom: 200PX;
 }
 .text-center{
     margin-top: 100px;
 }
-.img-fluid{
-    margin-top: 100px;
-}
+
 .first_col{
     background-color: white;
-    height: 550px;
+    height: 390px;
     position: relative;
     width: 550px;
     left: 155px;
-    top: 171px;
+    top: 100px;
     border-radius: 20px;
 }
 .img-fluid{
     border-radius: 20px;
-}
-.last_row{
-    width: 100%;
     position: relative;
-    left: 350px;
-    top: 50px;
-    height: 200px;
-    padding-bottom: 100px;
+    left: 30px;
+    
+}
+
+.btn-primary{
     background-color: #c1b688;
+    border: #c1b688;
+    padding: 15px;
+    margin-top: 10px;
+    
+}
+.btn-primary:hover{
+    background-color: black;
+}
+.form-control{
+    height: 52px;
+    background-color: #fff;
+    font-size: 14px;
+    border-radius: 2px;
+    box-shadow: none;
+    border: 1px solid grey;
+
+}
+.form-control[type=text]:focus{
+    border:2px solid grey
+}
+@media only screen and (max-width:600px) {
+    .first_col{
+        position: initial;
+        left: 0;
+    }
+   
 }
