--- a/contact us.css
+++ b/contact us.css
@@ -36,8 +36,8 @@ label{
 .img-fluid{
     border-radius: 20px;
     position: relative;
-    left: 30px;
-    
+    left: 100px;
+    margin-top: 150px;
 }
 
 .btn-primary{
